Conditional graph elements (#613)