@@ -1,12 +1,14 @@
 package io.koraframework.config.common;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import io.koraframework.application.graph.Lifecycle;
-import io.koraframework.application.graph.ValueOf;
+import io.koraframework.application.graph.Node;
+import io.koraframework.application.graph.RefreshableGraph;
 import io.koraframework.config.common.origin.ConfigOrigin;
 import io.koraframework.config.common.origin.ContainerConfigOrigin;
 import io.koraframework.config.common.origin.FileConfigOrigin;
+import org.jspecify.annotations.Nullable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -15,26 +17,27 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Optional;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 
 public class ConfigWatcher implements Lifecycle {
     private static final Logger log = LoggerFactory.getLogger(ConfigWatcher.class);
 
-    private final Optional<ValueOf<ConfigOrigin>> applicationConfig;
+    private final RefreshableGraph graph;
+    private final @Nullable Node<? extends ConfigOrigin> applicationConfigNode;
     private final AtomicBoolean isStarted = new AtomicBoolean(false);
     private final int checkTime;
     private volatile Thread thread;
 
-    public ConfigWatcher(Optional<ValueOf<ConfigOrigin>> applicationConfig, int checkTime) {
-        this.applicationConfig = applicationConfig;
+    public ConfigWatcher(RefreshableGraph graph, @Nullable Node<? extends ConfigOrigin> applicationConfigNode, int checkTime) {
+        this.graph = graph;
+        this.applicationConfigNode = applicationConfigNode;
         this.checkTime = checkTime;
     }
 
     @Override
     public void init() {
-        if (this.applicationConfig.isEmpty()) {
+        if (this.applicationConfigNode == null) {
             return;
         }
 
@@ -46,15 +49,15 @@ public class ConfigWatcher implements Lifecycle {
         if (enableConfigWatch != null && !Boolean.parseBoolean(enableConfigWatch)) {
             return;
         } else if (this.isStarted.compareAndSet(false, true)) {
-            this.thread = new Thread(this::watchJob);
-            this.thread.setName("config-reload");
-            this.thread.start();
+            this.thread = Thread.ofVirtual()
+                .name("config-reload")
+                .start(this::watchJob);
         }
     }
 
     @Override
     public void release() {
-        if (this.applicationConfig.isEmpty()) {
+        if (this.applicationConfigNode == null) {
             return;
         }
         if (this.isStarted.compareAndSet(true, false)) {
@@ -64,14 +67,11 @@ public class ConfigWatcher implements Lifecycle {
     }
 
     private void watchJob() {
-        if (this.applicationConfig.isEmpty()) {
+        if (this.applicationConfigNode == null) {
             return;
         }
-        var config = this.applicationConfig.get().get();
+        var config = this.graph.get(this.applicationConfigNode);
         var origins = this.parseOrigin(config);
-        if (origins.isEmpty()) {
-            return;
-        }
         record State(Path configPath, Instant lastModifiedTime) {}
         Function<Path, State> stateExtractor = configuredPath -> {
             try {
@@ -89,6 +89,55 @@ public class ConfigWatcher implements Lifecycle {
             state.put(origin.path(), originalState);
         }
         while (this.isStarted.get()) {
+            var newConfig = this.graph.get(this.applicationConfigNode);
+            if (config != newConfig) {
+                config = newConfig;
+                var changed = false;
+                origins = this.parseOrigin(config);
+
+                var newStates = new HashMap<Path, State>();
+                for (var origin : origins) {
+                    var currentState = state.get(origin.path());
+                    if (currentState == null) {
+                        log.debug("New config origin {} no more present in graph", origin);
+                        changed = true;
+                        var originalState = stateExtractor.apply(origin.path());
+                        newStates.put(origin.path(), originalState);
+                    }
+                }
+                for (var entry : state.entrySet()) {
+                    var oldPath = entry.getKey();
+                    var oldState = state.get(oldPath);
+                    var newState = newStates.get(oldPath);
+                    if (newState == null) {
+                        changed = true;
+                        log.debug("Config origin {} no more present in graph", entry.getKey());
+                    } else if (!newState.configPath.equals(oldState.configPath)) {
+                        log.debug("New config symlink target");
+                        changed = true;
+                    } else if (newState.lastModifiedTime.isAfter(oldState.lastModifiedTime)) {
+                        log.debug("Config modified");
+                        changed = true;
+                    }
+                }
+                state = newStates;
+                if (changed) {
+                    try {
+                        this.graph.refresh(this.applicationConfigNode);
+                        log.info("Config refreshed");
+                        Thread.sleep(this.checkTime);
+                    } catch (InterruptedException ignore) {
+                    } catch (Exception e) {
+                        log.warn("Error on checking config for changes", e);
+                        try {
+                            Thread.sleep(this.checkTime);
+                        } catch (InterruptedException ignore) {
+                        }
+                    }
+                }
+                continue;
+            }
+
             var changed = new HashMap<Path, State>();
             for (var entry : state.entrySet()) {
                 var path = entry.getKey();
@@ -115,7 +164,7 @@ public class ConfigWatcher implements Lifecycle {
             }
             try {
                 if (!changed.isEmpty()) {
-                    this.applicationConfig.get().refresh();
+                    this.graph.refresh(this.applicationConfigNode);
                     log.info("Config refreshed");
                     state.putAll(changed);
                 }
